# SwitchHostsRust

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  NOTICE  Packager.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yml  release.yml  test.yml
app/egui/: Cargo.toml
app/egui/src/: app.rs  app_icon.rs  data_transfer.rs  macos.rs  macos_delegate.rs  remote_refresh.rs  segmented.rs  tray_native.rs
app/egui/src/panels/: config_menu.rs  details.rs  find_replace.rs  history.rs  import_from_url.rs  mod.rs  preferences.rs  trash.rs  tree.rs
app/egui/tests/: smoke.rs
app/gpui/: Cargo.toml
app/gpui/src/: main.rs
apps/egui/: Cargo.toml  build.rs
apps/egui/src/: app.rs  app_icon.rs  config_effects.rs  data_transfer.rs  fonts.rs  http_api_runtime.rs  icons.rs  lib.rs  lifecycle.rs  macos.rs  macos_delegate.rs  main.rs  remote_refresh.rs  segmented.rs  shared_runtime.rs  text_align.rs  theme.rs  tray.rs  tray_native.rs  viewport.rs
apps/egui/src/panels/: activity.rs  details.rs  drawer.rs  edit_hosts.rs  editor.rs  find_replace.rs  history.rs  import_from_url.rs  import_notice.rs  menu.rs  mod.rs  navigation.rs  preferences.rs  status_bar.rs  top_bar.rs  trash.rs  tree.rs  widgets.rs
apps/egui/tests/: smoke.rs
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  main.rs
crates/cli/tests/: cli_integration.rs
crates/core/: Cargo.toml  build.rs
crates/core/src/: lib.rs
crates/core/src/find/: mod.rs
crates/core/src/hosts_apply/: aggregate.rs  cmd_runner.rs  elevation.rs  error.rs  history.rs  mod.rs  pipeline.rs  platform_write.rs  target.rs  write.rs
crates/core/src/hosts_edit/: mod.rs
crates/core/src/import_export/: mod.rs
crates/core/src/manifest_edit/: mod.rs
crates/core/src/storage/: atomic.rs  config.rs  entries.rs  error.rs  manifest.rs  mod.rs  paths.rs  state.rs  trashcan.rs  tree_format.rs
crates/core/src/toggle/: mod.rs
crates/core/tests/: apply_integration.rs  storage_integration.rs  toggle_integration.rs
crates/service/: Cargo.toml
crates/service/src/: lib.rs
crates/service/src/api/: mod.rs
crates/service/src/client/: mod.rs
crates/service/src/scheduler/: mod.rs
crates/service/tests/: api_integration.rs  client_integration.rs
crates/ui-assets/: Cargo.toml  build.rs
crates/ui-assets/src/: app_icons.rs  fonts.rs  icons.rs  lib.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: apps.rs  dev_app.rs  dev_gui.rs  dmg.rs  main.rs  package.rs  packager_config.rs  release.rs  sync_fonts.rs  sync_icons.rs  util.rs
docs/phases/: README.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md
scripts/: dev-gui.sh  package-macos.sh  run-gui-macos.sh  sync-fonts.sh  sync-icons.sh
tests/fixtures/: manifest.json
tests/fixtures/entries/: local-1.hosts  local-2.hosts
