[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/service",
    "crates/cli",
    "apps/egui",
]
default-members = ["crates/cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["switch-hosts-rust contributors"]
rust-version = "1.75"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "socks"] }
axum = "0.8"
clap = { version = "4", features = ["derive", "env"] }
tempfile = "3"
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"
pretty_assertions = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
sha2 = "0.10"
regex = "1"
uuid = { version = "1", features = ["v4"] }
eframe = { version = "0.31", default-features = true }
egui = "0.31"
rfd = "0.15"
tray-icon = "0.19"
auto-launch = "0.5"

switch-hosts-core = { path = "crates/core", package = "core" }
service = { path = "crates/service" }
