[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/ui-assets",
    "crates/service",
    "crates/cli",
    "crates/xtask",
    "apps/egui",
]
default-members = ["crates/cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["switch-hosts-rust contributors"]
rust-version = "1.75"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "socks"] }
axum = "0.8"
clap = { version = "4", features = ["derive", "env"] }
tempfile = "3"
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"
pretty_assertions = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
sha2 = "0.11"
regex = "1"
uuid = { version = "1", features = ["v4"] }
eframe = { version = "0.34", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.34"
egui_extras = { version = "0.34", features = ["svg"] }
rfd = "0.17"
webbrowser = "1"
tray-icon = "0.24"
auto-launch = "0.6"

switch-hosts-core = { path = "crates/core", package = "core" }
ui-assets = { path = "crates/ui-assets" }
service = { path = "crates/service", default-features = false }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
