[package]
name = "egui-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "SwitchHostsRust egui desktop app"
publish = false
build = "build.rs"

# macOS .app 打包见仓库根目录 Packager.toml（cargo-packager）

[lib]
name = "egui_app"
path = "src/lib.rs"

[[bin]]
name = "switch-hosts-rust-gui"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
switch-hosts-core.workspace = true
ui-assets.workspace = true
chrono.workspace = true
tokio.workspace = true
reqwest = { workspace = true, default-features = false, features = ["rustls"] }
service = { workspace = true, default-features = false, features = ["client", "api"] }
eframe = { version = "0.34", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }
egui = "0.34"
egui_extras = { version = "0.34", features = ["svg"] }
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
tray-icon.workspace = true
auto-launch.workspace = true
webbrowser.workspace = true
rfd.workspace = true
image = { version = "0.25", default-features = false, features = ["png"] }
resvg = { version = "0.45", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
raw-window-handle = "0.6"
core-foundation = "0.10"
core-foundation-sys = "0.8"
objc2 = { version = "0.6", default-features = false, features = ["std", "exception"] }
objc2-foundation = { version = "0.3", default-features = false, features = ["NSData", "NSString", "NSProcessInfo", "NSObject", "NSArray"] }
objc2-app-kit = { version = "0.3", default-features = false, features = [
    "std",
    "NSApplication",
    "NSImage",
    "NSRunningApplication",
    "NSResponder",
    "NSWindow",
    "NSView",
    "NSButton",
] }

[dev-dependencies]
tempfile.workspace = true

[[test]]
name = "smoke"
path = "tests/smoke.rs"
