[package]
name = "egui-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "SwitchHostsRust egui desktop app"
publish = false

[lib]
name = "egui_app"
path = "src/lib.rs"

[[bin]]
name = "switch-hosts-rust-gui"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
switch-hosts-core.workspace = true
tokio.workspace = true
service.workspace = true
eframe.workspace = true
egui.workspace = true
egui_extras.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
tray-icon.workspace = true
auto-launch.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
raw-window-handle = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = [
    "std",
    "NSWindow",
    "NSView",
    "NSButton",
] }

[dev-dependencies]
tempfile.workspace = true

[[test]]
name = "smoke"
path = "tests/smoke.rs"
