[package]
name = "egui-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "SwitchHostsRust egui desktop app"
publish = false
build = "build.rs"

[package.metadata.bundle]
name = "SwitchHostsRust"
identifier = "app.switchhostsrust"
icon = [
    "apps/egui/icons/32x32.png",
    "apps/egui/icons/128x128.png",
    "apps/egui/icons/128x128@2x.png",
    "apps/egui/icons/icon.icns",
    "apps/egui/icons/icon.ico",
]
copyright = "Copyright (c) switch-hosts-rust contributors"
category = "Developer Tool"
short_description = "Manage and switch between multiple hosts configurations"
long_description = """
SwitchHostsRust is an unofficial, community-maintained Rust reimplementation
inspired by SwitchHosts. It is not affiliated with or endorsed by the
SwitchHosts project. Manage and switch between multiple hosts file
configurations on macOS, Windows, and Linux.
"""
osx_minimum_system_version = "10.15"
osx_frameworks = ["Security"]

[lib]
name = "egui_app"
path = "src/lib.rs"

[[bin]]
name = "switch-hosts-rust-gui"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
switch-hosts-core.workspace = true
tokio.workspace = true
chrono.workspace = true
service.workspace = true
eframe.workspace = true
egui.workspace = true
egui_extras.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
tray-icon.workspace = true
auto-launch.workspace = true
webbrowser.workspace = true
rfd.workspace = true
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(target_os = "macos")'.dependencies]
raw-window-handle = "0.6"
core-foundation = "0.10"
core-foundation-sys = "0.8"
objc2 = { version = "0.6", default-features = false, features = ["std", "exception"] }
objc2-foundation = { version = "0.3", default-features = false, features = ["NSData", "NSString", "NSProcessInfo", "NSObject", "NSArray"] }
objc2-app-kit = { version = "0.3", default-features = false, features = [
    "std",
    "NSApplication",
    "NSImage",
    "NSRunningApplication",
    "NSResponder",
    "NSWindow",
    "NSView",
    "NSButton",
] }

[dev-dependencies]
tempfile.workspace = true

[[test]]
name = "smoke"
path = "tests/smoke.rs"
