[package]
name = "egui-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "SwitchHostsRust egui desktop app"
publish = false
build = "build.rs"

[package.metadata.bundle]
name = "SwitchHostsRust"
identifier = "app.switchhostsrust"
icon = [
    "crates/ui-assets/app-icons/icon.icns",
    "crates/ui-assets/app-icons/32x32.png",
    "crates/ui-assets/app-icons/128x128.png",
    "crates/ui-assets/app-icons/128x128@2x.png",
]
copyright = "Copyright (c) switch-hosts-rust contributors"
category = "Developer Tool"
short_description = "Manage and switch between multiple hosts configurations"
long_description = """
SwitchHostsRust is an unofficial, community-maintained Rust reimplementation
inspired by SwitchHosts. It is not affiliated with or endorsed by the
SwitchHosts project. Manage and switch between multiple hosts file
configurations on macOS, Windows, and Linux.
"""
osx_minimum_system_version = "10.15"
# Security 由 core/build.rs 动态链接系统框架，勿写入 osx_frameworks（cargo-bundle 会整包复制 ~6MB）

[lib]
name = "egui_app"
path = "src/lib.rs"

[[bin]]
name = "switch-hosts-rust-gui"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
switch-hosts-core.workspace = true
ui-assets.workspace = true
chrono.workspace = true
tokio.workspace = true
reqwest = { workspace = true, default-features = false, features = ["rustls-tls"] }
service = { workspace = true, default-features = false, features = ["client", "api"] }
eframe.workspace = true
egui.workspace = true
egui_extras.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
tray-icon.workspace = true
auto-launch.workspace = true
webbrowser.workspace = true
rfd.workspace = true
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(target_os = "macos")'.dependencies]
raw-window-handle = "0.6"
core-foundation = "0.10"
core-foundation-sys = "0.8"
objc2 = { version = "0.6", default-features = false, features = ["std", "exception"] }
objc2-foundation = { version = "0.3", default-features = false, features = ["NSData", "NSString", "NSProcessInfo", "NSObject", "NSArray"] }
objc2-app-kit = { version = "0.3", default-features = false, features = [
    "std",
    "NSApplication",
    "NSImage",
    "NSRunningApplication",
    "NSResponder",
    "NSWindow",
    "NSView",
    "NSButton",
] }

[dev-dependencies]
tempfile.workspace = true

[[test]]
name = "smoke"
path = "tests/smoke.rs"
