[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "SwitchHostsRust CLI"

[[bin]]
name = "switch-hosts-rust"
path = "src/main.rs"

[dependencies]
switch-hosts-core.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
