[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "SwitchHostsRust CLI"

[[bin]]
name = "switch-hosts-rust"
path = "src/main.rs"

[dependencies]
switch-hosts-core.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true

[[test]]
name = "cli_integration"
path = "tests/cli_integration.rs"
