[package]
name = "core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "SwitchHostsRust core business logic"

[lib]
doctest = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
dirs.workspace = true
tracing.workspace = true
chrono.workspace = true
sha2.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
pretty_assertions.workspace = true



[[test]]
name = "storage_integration"
path = "tests/storage_integration.rs"
