[package]
name = "service"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "SwitchHostsRust network service layer"

[features]
default = ["client", "api"]
client = []
api = ["dep:axum"]
scheduler = ["client"]

[dependencies]
switch-hosts-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
reqwest.workspace = true
axum = { workspace = true, optional = true }
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
wiremock.workspace = true
pretty_assertions.workspace = true

[[test]]
name = "client_integration"
path = "tests/client_integration.rs"

[[test]]
name = "api_integration"
path = "tests/api_integration.rs"
required-features = ["api"]
