[package]
name = "ui-assets"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Embedded fonts, Tabler SVG icons, and application bitmaps (GUI-framework agnostic)"
publish = false
build = "build.rs"

[dependencies]
