[package]
name = "xtask"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
dirs.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
regex.workspace = true
tempfile.workspace = true
toml = "0.8"
cargo-packager = { version = "0.11", default-features = false }
